fixed text scrolling + got the covers

--- a/MongoBooks2/AngularMongoBooks3/ClientApp/src/app/components/Grids/books-read-table/books-read-table.component.scss
+++ b/MongoBooks2/AngularMongoBooks3/ClientApp/src/app/components/Grids/books-read-table/books-read-table.component.scss
@@ -3,3 +3,12 @@
   max-height: 100px;
   overflow-y: auto;
 }
+
+.scrollable {
+  height: 95px;
+  overlow-y: auto;
+}
+
+img.aspectshrink {
+  height: 95px;
+}
